#38: Update tests. Also add a domain test and tests for the new mappers.